# agcore

./: CMakeLists.txt  Kconfig  README.md  agcore.c  agcore.h  agcore_port.h
BLE/: CMakeLists.txt  Kconfig  agcore_ble.c  agcore_ble.h  agcore_ble_adv.c  agcore_ble_data.c  agcore_ble_gap.c  agcore_ble_gatt.c  agcore_ble_internal.h
DataChannel/: agcore_data_queue.c  agcore_datachannel.h  agcore_dataevent_route.c
DisplayDriver/: CMakeLists.txt  Kconfig  display_driver.h
DisplayDriver/display7735/: display7735.c  display7735.h  display7735_kconfig
PixelDriver/: CMakeLists.txt  Kconfig  pixel_driver.h  pixel_ws2812b.c
PrintfLog/: CMakeLists.txt  Kconfig  agcore_printf_log.h  app_printf_log.h
Utils/: CMakeLists.txt  agcore_utils.c  agcore_utils.h
Version/: CMakeLists.txt  agcore_version.c  agcore_version.h
